# Vina-Backend

./: .gitignore  pyproject.toml  vina.spec  vina_launcher.py
src/vina/: __main__.py  config.py  server.py
src/vina/indexer/: chunk.py  embed.py  extract.py  runner.py  store.py  watcher.py
src/vina/llm/: manager.py
src/vina/search/: retrieve.py
tests/: conftest.py
tests/integration/: test_index_pipeline.py  test_runner.py  test_search_api.py  test_watcher.py
tests/unit/: test_chunk.py  test_config.py  test_embed.py  test_extract.py  test_retrieve.py  test_store.py
