[project]
name = "vina"
version = "0.1.0"
description = "Local AI File Search"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "lancedb>=0.34.0",
    "psutil>=7.2.2",
    "pyinstaller>=6.21.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "uvicorn>=0.51.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vina"]

[project.scripts]
vina = "vina.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    --cov=src/vina
    --cov-branch
    --cov-report=term-missing
    --cov-report=html
    -ra
"""

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]